# ChangeLog for media-fonts/vlgothic
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/vlgothic/ChangeLog,v 1.43 2009/07/17 15:02:51 matsuu Exp $

*vlgothic-20090710 (17 Jul 2009)

  17 Jul 2009; MATSUU Takuto <matsuu@gentoo.org> +vlgothic-20090710.ebuild:
  Version bumped.

*vlgothic-20090612 (14 Jun 2009)

  14 Jun 2009; MATSUU Takuto <matsuu@gentoo.org> -vlgothic-20081203.ebuild,
  -vlgothic-20090108.ebuild, +vlgothic-20090612.ebuild:
  Version bumped.

*vlgothic-20090422 (22 Apr 2009)

  22 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> +vlgothic-20090422.ebuild:
  Version bumped.

*vlgothic-20090108 (08 Jan 2009)

  08 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> +vlgothic-20090108.ebuild:
  Version bumped.

*vlgothic-20081203 (03 Dec 2008)

  03 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> -vlgothic-20071215.ebuild,
  -vlgothic-20081124.ebuild, +vlgothic-20081203.ebuild:
  Version bumped. Removed old versions.

  30 Nov 2008; Markus Meier <maekke@gentoo.org> vlgothic-20081029.ebuild:
  amd64 stable, bug #248500

  26 Nov 2008; Brent Baude <ranger@gentoo.org> vlgothic-20081029.ebuild:
  stable ppc64, bug 248500

  24 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  vlgothic-20081029.ebuild:
  ppc stable, bug #248500

  24 Nov 2008; Raúl Porcel <armin76@gentoo.org> vlgothic-20081029.ebuild:
  alpha/ia64/sparc/x86 stable wrt #248500

  24 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> vlgothic-20071215.ebuild,
  vlgothic-20081029.ebuild, vlgothic-20081124.ebuild:
  Added sazanami license, bug #240554.

*vlgothic-20081124 (24 Nov 2008)

  24 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -vlgothic-20080610.ebuild,
  -vlgothic-20080624.ebuild, -vlgothic-20080908.ebuild,
  +vlgothic-20081124.ebuild:
  Version bumped.

*vlgothic-20081029 (28 Oct 2008)

  28 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +vlgothic-20081029.ebuild:
  Version bumped.

*vlgothic-20080908 (11 Sep 2008)
