@@ -2,9 +2,11 @@ DIST VLGothic-20081029.tar.bz2 4651210 RMD160 041107803f09bf843643f0737c2c6ba57f
 DIST VLGothic-20090422.tar.bz2 4728873 RMD160 33f9ad59e33e5fb7aecbc388c7db9713ed19f2c1 SHA1 4055304d71488e7561edf7cc5e7344d694bac802 SHA256 3b61dfc15875626edb258574826de469753138ad1448bbb5fe6b9efe61433aa5
 DIST VLGothic-20090612.tar.bz2 4745549 RMD160 36892f1aaa15a5988456fa6d74b4ce1ffe21fe5c SHA1 b080ab4f1b9a68da3d9875041fb3c286c16f8972 SHA256 f3c5ab77f4aca3089b37f9eb3e66cca7ebd7f1314ba999cecdf6f8115ba84db0
 DIST VLGothic-20090710.tar.bz2 4747545 RMD160 97c30f21a1a39f6596d947dcdf62a1e4279d42cb SHA1 8946ca9da115677f2fe42c50c308b6983b1431e2 SHA256 3f91f99cdde34072838a4148c50cae055e3fda5e2ffb08520114272140d2819b
+DIST VLGothic-20090811.tar.bz2 4749225 RMD160 51dae1de01757ae86c1b6d6b2e83ed121d5a6818 SHA1 176ca8def653b91db73f950dcdc3fb7f87b165d3 SHA256 60a3f213c91f4fa22ae479e5298cd13c3d1a94a235ad19239928b0f7d71d0f1a
 EBUILD vlgothic-20081029.ebuild 647 RMD160 8bcd4432358fa37a7752f86aa24f3e63b4ad3841 SHA1 460e083e24a6aad48cf6d6c7fb25d8c709a287e2 SHA256 dfb3ea2e413b758a2f0a2e35b8ac7916339851dc54b75087ddbd2d2dfa79080c
 EBUILD vlgothic-20090422.ebuild 654 RMD160 1e7fc0249d248b87503276cf7c25644160a215bd SHA1 aeb68ca3f203a1fd1ce1e7510a3b17a02568644e SHA256 4c21ddd68d9ce9839828195886096df8a0c38c64e15ddd949e96400f2a056b75
 EBUILD vlgothic-20090612.ebuild 654 RMD160 9f538f8b13c2f9f893d8eed183ebab2a0296a0de SHA1 f9f95d0dd2f1c827148eaaae3731f81ecb9a2080 SHA256 c324aaaac5fd673490c244c528d88de76a45203424565cb06176064feb8f71a4
 EBUILD vlgothic-20090710.ebuild 654 RMD160 b750ee3471cb6ffa744183a7b864fcb2c84e5f89 SHA1 27005c3cb419111618597914f1097f1d649880a7 SHA256 622c90688d61170954b7f00a6c59c9b3ce8a5414c2c6e8e409856ecf71b3100f
-MISC ChangeLog 6426 RMD160 6d7693979fc8c7d734630fc2c3ec8f4153740382 SHA1 282f5c9f9f1cb95623122c72d12dc59be81126b4 SHA256 14ceae609cbdd47717d6572b466e526588503b3e1634d5aedb4cd5c7cf2ad191
+EBUILD vlgothic-20090811.ebuild 654 RMD160 7b1ce9e25c1b554153655923a30d51e5c6000823 SHA1 5b16ede5c240d6bb089fd93db7f8f67e1758dfa8 SHA256 d64c26b7d92a95ba3fca5d601e1a753740fe338d83c52447e8fddc7361ce92dc
+MISC ChangeLog 6555 RMD160 4bd46586c823d794d27046e889e4192685a2ffe4 SHA1 c1a9d0d6c126820cac5c8d97d3e5721e76ca3fd1 SHA256 fff866a5ec088a0c5d4c7a62d7fae0415b10affc6a38616ed26c0e1ac0768e09
 MISC metadata.xml 159 RMD160 960b06def1afcfaca87d5dc2f5a3fcfc508cf423 SHA1 772e6a83025e034eaee948833278ee46f1bfc0f5 SHA256 ad008d96fe36a7e9201b1d92332022bec87b557c8a36ea05a72ddf3b729102b1
